...
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:title="@tools:sample/lorem/random"
            app:toolbarId="@+id/toolbar">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/header_hero_image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/hero_image"
...
                app:title="@tools:sample/lorem/random" />

        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/fab_margin"
        android:contentDescription="@string/add_to_favorites_button"
        app:layout_anchor="@id/app_bar"
        app:layout_anchorGravity="bottom|end"
...
